fixed toggle slider
Fixed an issue where the slider button would appear out of place in smaller screens.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -416,11 +416,21 @@ input:checked + .slider:before {
     html {
         font-size: 45%;
     }
+    input:checked + .slider:before {
+        -webkit-transform: translateX(3rem);
+        -ms-transform: translateX(3rem);
+        transform: translateX(3rem)
+    }
 }
 
 @media (max-width: 540px) {
     html {
         font-size: 42%;
+    }
+    input:checked + .slider:before {
+        -webkit-transform: translateX(3rem);
+        -ms-transform: translateX(3rem);
+        transform: translateX(3rem)
     }
 }
 
